
  * Raise an exception client-side when a caller tries to request
    SHAs that are not directly referenced the servers' refs.
    (Jelmer Vernooĳ)

  * Raise more informative errors when unable to connect to repository
    over SSH or subprocess. (Jelmer Vernooĳ)

  * Handle commit identity fields with multiple ">" characters.
    (Nicolas Dandrimont)

0.19.6	2018-08-11

 BUG FIXES

  * Fix support for custom transport arguments in ``dulwich.porcelain.clone``.
    (Semyon Slepov)

  * Fix compatibility with Python 3.8 (Jelmer Vernooĳ, Daniel M. Capella)

  * Fix some corner cases in ``path_to_tree_path``. (Romain Keramitas)

  * Support paths as bytestrings in various places in ``dulwich.index``
    (Jelmer Vernooĳ)

  * Avoid setup.cfg for now, since it seems to break pypi metadata.
    (Jelmer Vernooĳ, #658)

0.19.5	2018-07-08

 IMPROVEMENTS

  * Add ``porcelain.describe``. (Sylvia van Os)

 BUG FIXES

  * Fix regression in ``dulwich.porcelain.clone`` that prevented cloning
    of remote repositories. (Jelmer Vernooĳ, #639)

  * Don't leave around empty parent directories for removed refs.
    (Damien Tournoud, #640)

0.19.4	2018-06-24

 IMPROVEMENTS

  * Add ``porcelain.ls_files``. (Jelmer Vernooĳ)

  * Add ``Index.items``. (Jelmer Vernooĳ)

 BUG FIXES

  * Avoid unicode characters (e.g. the digraph ĳ in my surname) in setup.cfg,
    since setuptools doesn't deal well with them. See
    https://github.com/pypa/setuptools/issues/1062. (Jelmer Vernooĳ, #637)

0.19.3	2018-06-17

 IMPROVEMENTS

  * Add really basic `dulwich.porcelain.fsck` implementation.
    (Jelmer Vernooĳ)

  * When the `DULWICH_PDB` environment variable is set, make
    SIGQUIT open pdb in the 'dulwich' command.

  * Add `checkout` argument to `Repo.clone`.
    (Jelmer Vernooĳ, #503)

  * Add `Repo.get_shallow` method. (Jelmer Vernooĳ)

  * Add basic `dulwich.stash` module. (Jelmer Vernooĳ)

  * Support a `prefix` argument to `dulwich.archive.tar_stream`.
    (Jelmer Vernooĳ)

 BUG FIXES
